--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -214,6 +214,7 @@
 \newcommand{\Ab}{\mathbb{A}} % Semantic arrays set
 \newcommand{\B}{\mathbb{B}} % Boolean set
 \newcommand{\C}{\mathbb{C}} % Complex numbers
+\newcommand{\Cc}{\mathcal{C}} % Configuration space
 \newcommand{\D}{\mathcal{D}} % Distribution
 \newcommand{\Ec}{\mathcal{E}} % Semantic expressions
 \newcommand{\F}{\mathcal{F}} % Function set
