Added \minimize and \maximize

--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -284,6 +284,8 @@
 \newcommand{\dd}{\,\textnormal{d}} % Derivative d
 \DeclarePairedDelimiter{\openseg}{\rbrack}{\lbrack} % Open segment ]a, b[
 \DeclareMathOperator*{\atantwo}{atan2}
+\DeclareMathOperator*{\minimize}{minimize\:}
+\DeclareMathOperator*{\maximize}{maximize\:}
 
 %%% Custom commands
 \newcommand*{\set}[2]{\left\{\,#1 \: \middle| \: #2\,\right\}} % Set of the form { x | y }
