--- a/cs-classes.cls
+++ b/cs-classes.cls
@@ -229,6 +229,7 @@
 \newcommand{\Ec}{\mathcal{E}} % Semantic expressions
 \newcommand{\F}{\mathcal{F}} % Function set
 \newcommand{\G}{\mathcal{G}} % Graph
+\newcommand{\Hc}{\mathcal{H}} % Hilbert space
 \newcommand{\I}{\mathbb{I}} % Semantic integers
 \renewcommand{\L}{\mathcal{L}} % Loss function
 \newcommand{\N}{\mathbb{N}} % Natural numbers
@@ -304,6 +305,7 @@
 
 %%% Custom commands
 \newcommand*{\set}[2]{\left\{\,#1 \: \middle| \: #2\,\right\}} % Set of the form { x | y }
+\newcommand*{\inner}[2]{\left\langle#1 \, \middle| \, #2\right\rangle} % Set of the form { x | y }
 \newcommand*{\iset}[2]{\sem{#1, #2}} % Integer set with double bars
 \newcommand*{\roundsem}[1]{\llparenthesis #1 \rrparenthesis}
 \newcommand*{\ind}{\mathds{1}} % Indicator
